--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Italy -- Fiction'
+- GITenberg
 title: Le vergini delle rocce
 url: http://www.gutenberg.org/ebooks/42513
